<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">瑪利諾古蹟周遊樂2013</string>

    <string name="tab_video">影片</string>
    <string name="tab_gallery">照片集</string>
    <string name="tab_introduction">簡介</string>
    <string name="tab_website">古蹟網址</string>
    <string name="tab_map">位置</string>
    <string name="tab_contact">聯絡</string>
    
    <string name="splash_production">Connie Leung 誠意製作</string>
    <string name="cms_url">http://103.11.100.49/~connie/mcs/</string>
    <!--  
    <string name="cms_url">http://192.168.1.138/mcs/</string>
    -->
    <string name="map_school_title">瑪利諾修院學校\r\n小學部</string>
    <string name="map_school_address">九龍塘窩打老道130號</string>
    <string name="map_content_desc">瑪利諾修院學校小學部</string>
    <string name="map_mtr_title">太子地鐵站A出口</string>
    <string name="map_mtr_snippet_first">1) 轉乘的士直達學校入口</string>
    <string name="map_mtr_snippet_second">2) 步行30分鐘直達學校</string>
    
    <string name="map_bus1_title">1A, 6D, 42 巴士站</string>
    <string name="map_bus1_snippet">步行約7&#8211;10分鐘</string>
    <string name="map_bus2_title">1, 7B, 12A, 113 巴士站</string>
    <string name="map_bus2_snippet">步行約3&#8211;5分鐘</string>
    <string name="map_mtr_kowloontong_title">九龍塘地鐵站</string>
    <string name="map_mtr_kt_snippet_first">1) 轉乘九巴 10, 281A, 281B, 281X, 81C, 81S, 87D或3C, 然後在九龍塘會下車</string>
    <string name="map_mtr_kt_snippet_second">2) 乘坐4分鐘的士直達學校入口</string>
    <string name="reach">到達方法</string>
    
    <!-- Content descriptions -->
    <string name="intro_content_desc">古蹟同樂日</string>
    <string name="album_content_desc">照片集</string>
    <string name="image_content_desc">照片</string>
    <string name="btn_back_desc">返回上一個網頁</string>
    <string name="btn_fwd_desc">返回下一個網頁</string>
    <string name="btn_reload_desc">重新載入網頁</string>
    <string name="btn_open_browser_desc">在瀏覽器中打開網頁</string>
    
    <string name="pagerTitleLeft">第</string>
    <string name="pagerTitleRight">張</string>
<!-- 
    <string name="contact_email">con_leung10@yahoo.com</string>
    <string name="contact_phone">+852 2742 5268</string>
-->

    <string name="contact_email">mcsps@mcsps.edu.hk</string>
    <string name="contact_phone">+852 2336 0611</string>
    <string name="contact_fax">+852 2336 3154</string>
    <string name="contact_website">http://www.mcsps.edu.hk/</string>
    
    <string name="content_address">地址</string>
    <string name="content_email">電郵</string>
    <string name="content_fax">傳真</string>
    <string name="content_phone">電話</string>
    <string name="content_website">學校網址</string>
    
    <string name="send_email">發送郵件</string>
    <string name="phone_school">即時致電</string>
    <string name="share_website">分享古蹟網頁</string>
    <string name="choose_app">選擇程式</string>
    <string name="app_not_found">沒有合適的應用程式。</string>
    <string name="choose_viewer">選擇瀏覽程式</string>
    <string name="viewer_not_installed">沒有發現合適的瀏覽程式，請去Google Play Store下載。</string>
    <string name="email_subject">查詢</string>
    <string name="email_text">查詢</string>
    <string name="homepage">http://heritage.mcs.hk/index.html</string>
    
    <string name="confirm_exit">確認</string>
    <string name="cancel_exit">取消</string>
    <string name="title_confirm_exit">確認離開？</string>
    <string name="loading">載入&#8230;</string>
    <string name="no_internet_error">互聯網網路連接失敗。關閉應用程式。</string>
    <string name="exit_error">離開失敗，請再試一次。</string>
    <string name="info_title">資訊</string>
    <string name="http_request_error">HTTP請求被拒絕，請稍後再回來。</string>
    <string name="no_album_error">相簿暫時不存在。</string>
    <string name="menu_item_clear_memory_cache">清除內存圖像</string>
    <string name="menu_item_clear_disc_cache">清除外置卡圖像</string>
    <string name="menu_item_rate_myapp">給我評分</string>
    <string name="menu_legalnotices">法律聲明</string>
    <string name="menu_backtoschool">返回學校</string>
    <string name="share_subject">分享瑪利諾古蹟文物徑網頁</string>
    <string name="share_text">請參觀瑪利諾古蹟文物徑網頁 &#8211; http://fqrct.com/t/fffdb3b.</string>

    <string-array name="category">
    	<item>1:小冊子</item>    
    	<item>2:窩打老道</item>    
    	<item>3:美術室</item>    
    	<item>4:課室</item>    
    	<item>5:中庭</item>    
    	<item>6:舊翼</item>    
    	<item>7:修院</item> 
    	<item>8:體育設施</item>   
   	</string-array>
   	
    <array name="gallery_icons">
        <item>@drawable/album_leaflet</item>
        <item>@drawable/album_waterloo</item>
        <item>@drawable/album_artroom</item>
        <item>@drawable/album_classroom</item>
        <item>@drawable/album_courtyard</item>
        <item>@drawable/album_oldwing</item>
        <item>@drawable/album_convent</item>
        <item>@drawable/album_facility</item>
    </array>
    
</resources>
