<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="2dp" >

            <ImageView
                android:id="@+id/imgAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/content_address"
                android:src="@drawable/img_school" />

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:text="@string/map_school_address"
                android:textAppearance="@style/TextLargeBlack" />
        </TableRow>

         <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="2dp" >

            <ImageView
                android:id="@+id/imgWebsite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/content_website"
                android:src="@drawable/img_globe" />

            <TextView
                android:id="@+id/tvWebsite"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:text="@string/contact_website"
                android:autoLink="web"
                android:textAppearance="@style/TextMediumBlack" />
        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="2dp" >

            <ImageView
                android:id="@+id/imgEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/content_email"
                android:src="@drawable/img_email" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:text="@string/contact_email"
                android:autoLink="email"
                android:textAppearance="@style/TextLargeBlack" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="5dp" >

            <ImageView
                android:id="@+id/imgPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/content_phone"
                android:src="@drawable/img_phone" />

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:text="@string/contact_phone"
                android:textAppearance="@style/TextLargeBlack" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="5dp" >

            <ImageView
                android:id="@+id/imgFax"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/content_fax"
                android:src="@drawable/img_fax" />

            <TextView
                android:id="@+id/tvFax"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/contact_fax"
                android:textAppearance="@style/TextLargeBlack" />
        </TableRow>
    </TableLayout>
</ScrollView>
