<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"      
    xmlns:myapp="http://schemas.android.com/apk/res-auto">
    
  <item
        android:id="@+id/menu_email"
        android:icon="@drawable/ic_send_email"
        android:orderInCategory="110"
        android:showAsAction="never"
        android:title="@string/send_email"/>
    <item
        android:id="@+id/menu_phone"
        android:orderInCategory="120"
        android:icon="@drawable/ic_phone2"
        android:showAsAction="never"
        android:title="@string/phone_school"/>
    <item
        android:id="@+id/menu_share"
        android:orderInCategory="130"
        android:icon="@drawable/ic_share"
        android:showAsAction="never"
        android:title="@string/share_website"/>
</menu>
