<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        	android:layout_width="match_parent"
        	android:layout_height="0dp"
        	android:layout_weight="1">
        <!--  use a framelayout to hold the webview -->
        <FrameLayout
            android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        
          <ProgressBar
              android:id="@+id/web_view_progress"
              style="?android:attr/progressBarStyleLarge"
              android:layout_width="52dp"
              android:layout_height="52dp"
              android:layout_gravity="center"
              android:indeterminateBehavior="repeat"
              android:indeterminateDrawable="@drawable/anim_activity_main_preload" />

        </FrameLayout>
    </RelativeLayout>
	<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_show_stick_height"
        android:background="@android:color/white" >

        <ImageButton
            android:id="@+id/web_view_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:paddingLeft="@dimen/web_view_margin_1"
            android:paddingRight="@dimen/web_view_margin_1"
            android:background="@drawable/webviewtheme_btn_default_holo_dark"
            style="@style/WebviewTheme"
            android:contentDescription="@string/btn_back_desc"
            android:src="@drawable/img_back" />

        <ImageButton
            android:id="@+id/web_view_btn_forward"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/web_view_btn_back"
            android:paddingLeft="@dimen/web_view_margin_2"
            android:paddingRight="@dimen/web_view_margin_2"
            android:background="@drawable/webviewtheme_btn_default_holo_dark"
            style="@style/WebviewTheme"
            android:contentDescription="@string/btn_fwd_desc"
            android:src="@drawable/img_forward" />

        <FrameLayout
            android:id="@+id/web_view_lay_refresh"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/web_view_btn_forward"
            android:paddingRight="@dimen/web_view_margin_3" >

            <ImageButton
                android:id="@+id/web_view_btn_refresh"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
	            android:background="@drawable/webviewtheme_btn_default_holo_dark"
    	        style="@style/WebviewTheme"
	            android:paddingLeft="@dimen/web_view_margin_3"
    	        android:paddingRight="@dimen/web_view_margin_3"
                android:src="@drawable/img_refresh"
	            android:contentDescription="@string/btn_reload_desc"
                android:visibility="invisible" />

            <ProgressBar
                android:id="@+id/loading1"
                style="?android:attr/progressBarStyleSmallInverse"
                android:layout_width="@dimen/loading_spinner_size_small"
                android:layout_height="@dimen/loading_spinner_size_small"
                android:paddingLeft="@dimen/web_view_margin_3"
                android:layout_gravity="center_vertical"
                android:visibility="visible" />
        </FrameLayout>
        
        <ImageButton
            android:id="@+id/web_view_btn_share"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/web_view_lay_refresh"
            android:background="@drawable/webviewtheme_btn_default_holo_dark"
            android:paddingLeft="@dimen/web_view_margin_3"
            android:paddingRight="@dimen/web_view_margin_3"
            android:contentDescription="@string/btn_open_browser_desc"
            android:src="@drawable/img_open_browser" />
        
    </RelativeLayout>
</LinearLayout>
